--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		<br>
 		<p>やってみたい技とかあれば、練習メニューに加えたりして、強くなる練習・楽しむ練習どちらも充実してます！天心キックとかやりたくないですか？？笑</p>
 		<div class="innerS_link">
-			<a href="indexindex3.html">よくある質問に答えます- Q&A ☚</a>
+			<a href="index/index3.html">よくある質問に答えます- Q&A ☚</a>
 		</div>
 	</div>
 </section>
