--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="最新技術と自然との調和を目指す">
+<meta name="description" content="">
 <meta name="viewport" content="width=device-width">
 <title>九州大学芦原空手部</title>
-<link rel="stylesheet" media="all" href="css/style.css">
+<link rel="stylesheet" media="all" href="https://ashihara-kyushu.github.io/web-site/css/style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="js/script.js"></script>
+<script src="https://ashihara-kyushu.github.io/web-site/js/script.js"></script>
 </head>
 
 <body id="top">
