--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<p class="innerS_p">通常　18:30~21:00：九大伊都キャンパス課外活動施設Ⅱ</p>
 		<div class="innerS_link">
 			<p class="innerS_link_p"><span>所属部員/部員紹介</span></p>
-			<a href="index/index2.html">ここをクリック☚</a>
+			<a href="https://ashihara-kyushu.github.io/web-site/index/index2.html">ここをクリック☚</a>
 		</div>
 	</div>
 </section>
@@ -92,7 +92,7 @@
 		<br>
 		<p>やってみたい技とかあれば、練習メニューに加えたりして、強くなる練習・楽しむ練習どちらも充実してます！天心キックとかやりたくないですか？？笑</p>
 		<div class="innerS_link">
-			<a href="index/index3.html">よくある質問に答えます- Q&A ☚</a>
+			<a href="https://ashihara-kyushu.github.io/web-site/index/index3.html">よくある質問に答えます- Q&A ☚</a>
 		</div>
 	</div>
 </section>
