--- a/index/index3.html
+++ b/index/index3.html
@@ -54,6 +54,6 @@
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="js/script3.js"></script>
+  <script src="https://ashihara-kyushu.github.io/web-site/index/js/script3.js"></script>
 </body>
 </html>
