--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width">
 <title>九州大学芦原空手部</title>
-<link rel="stylesheet" media="all" href="https://ashihara-kyushu.github.io/web-site/css/style.css">
+<link rel="stylesheet" media="all" href="css/style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.4/css/all.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-<script src="https://ashihara-kyushu.github.io/web-site/js/script.js"></script>
+<script src="js/script.js"></script>
 </head>
 
 <body id="top">
@@ -53,7 +53,7 @@
 		<p class="innerS_p">通常　18:30~21:00：九大伊都キャンパス課外活動施設Ⅱ</p>
 		<div class="innerS_link">
 			<p class="innerS_link_p"><span>所属部員/部員紹介</span></p>
-			<a href="https://ashihara-kyushu.github.io/web-site/index/index2.html">ここをクリック☚</a>
+			<a href="index/index2.html">ここをクリック☚</a>
 		</div>
 	</div>
 </section>
@@ -92,7 +92,7 @@
 		<br>
 		<p>やってみたい技とかあれば、練習メニューに加えたりして、強くなる練習・楽しむ練習どちらも充実してます！天心キックとかやりたくないですか？？笑</p>
 		<div class="innerS_link">
-			<a href="https://ashihara-kyushu.github.io/web-site/index/index3.html">よくある質問に答えます- Q&A ☚</a>
+			<a href="index/index3.html">よくある質問に答えます- Q&A ☚</a>
 		</div>
 	</div>
 </section>
